# jellyfin-media-player

./: .clang-tidy  .gitignore  .gitmodules  BuildAndInstall.sh  BuildQT5-windows.md  CMakeLists.txt  CONTRIBUTING.md  DEEPLINK_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  WINDOWS.md  build_vs_debug.bat  build_windows.bat  check_qt_modules.bat  client-api.md  conanfile.py  debian-webclient-rules  download_webclient.sh  for-web-developers.md  setup-windows.bat  setup_build_deps.bat  test-sso-deeplink.sh
.github/: dependabot.yml  issue_template.md
CMakeModules/: AppleConfiguration.cmake  BreakpadSymbols.cmake  CPackConfiguration.cmake  CPackGeneratedConfig.cmake.in  ClangTidy.cmake  CompilerFlags.cmake  CompleteBundle.cmake  CompleteBundleMac.cmake.in  CompleteBundleOSX.cmake.in  CompleteBundleWin.cmake.in  DependencyConfiguration.cmake  FetchDependencies.cmake  FindBreakpad.cmake  FindCEC.cmake  FindDL.cmake  FindGLES2.cmake  FindICU.cmake  FindIconv.cmake  FindMPV.cmake  FindSDL2.cmake  GCCConfiguration.cmake  GenerateQtResources.cmake  InputConfiguration.cmake  InstallLinuxDesktopFile.cmake  WebClient.cmake  (+12 more)
src/: CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  KonvergoPCH.h  SignalManager.cpp  SignalManager.h  Version.cpp.in  Version.h  main.cpp
src/breakpad/: BreakPad.h  BreakPadDummy.cpp  BreakPadLinux.cpp  BreakPadOSX.cpp  BreakPadWin32.cpp  CMakeLists.txt  CrashDumps.h
src/cef/: CefApp.cpp  CefApp.h  CefHandler.cpp  CefHandler.h  CefView.cpp  CefView.h  CefWebChannelTransport.cpp  CefWebChannelTransport.h  EglDmaBufImporter.cpp  EglDmaBufImporter.h  QrcSchemeHandler.cpp  QrcSchemeHandler.h
src/core/: CMakeLists.txt  ComponentManager.cpp  Globals.cpp  Globals.h  ProfileManager.cpp  ProfileManager.h  SignalManager.cpp  SignalManager.h  Version.cpp.in
src/discord/: CMakeLists.txt  DatabaseComponent.cpp  DatabaseComponent.h  DiscordComponent.cpp  DiscordComponent.h
src/display/: CMakeLists.txt  DisplayComponent.cpp  DisplayComponent.h  DisplayManager.cpp  DisplayManager.h
src/display/dummy/: CMakeLists.txt  DisplayManagerDummy.cpp  DisplayManagerDummy.h
src/display/osx/: CMakeLists.txt  DisplayManagerOSX.cpp  DisplayManagerOSX.h
src/display/rpi/: CMakeLists.txt  DisplayManagerRPI.cpp  DisplayManagerRPI.h
src/display/win/: CMakeLists.txt  DisplayManagerWin.cpp  DisplayManagerWin.h
src/display/x11/: CMakeLists.txt  DisplayManagerX11.cpp  DisplayManagerX11.h
src/input/: CMakeLists.txt  InputCEC.cpp  InputCEC.h  InputComponent.cpp  InputComponent.h  InputKeyboard.h  InputLIRC.cpp  InputLIRC.h  InputMapping.cpp  InputMapping.h  InputRoku.cpp  InputRoku.h  InputSDL.cpp  InputSDL.h  InputSocket.cpp  InputSocket.h
src/input/apple/: AppleRemoteDelegate.h  AppleRemoteDelegate.mm  CMakeLists.txt  InputAppleMediaKeys.h  InputAppleMediaKeys.mm  InputAppleRemote.h  InputAppleRemote.mm
src/input/apple/HIDRemote/: HIDRemote.h  HIDRemote.m  README.txt
src/mpris/: CMakeLists.txt  MprisComponent.cpp  MprisComponent.h  MprisPlayerAdaptor.cpp  MprisPlayerAdaptor.h  MprisRootAdaptor.cpp  MprisRootAdaptor.h
src/player/: AlbumArtProvider.cpp  AlbumArtProvider.h  CMakeLists.txt  CodecsComponent.cpp  CodecsComponent.h  MpvVideoItem.cpp  MpvVideoItem.h  OpenGLDetect.cpp  OpenGLDetect.h  PlayerComponent.cpp  PlayerComponent.h  PlayerQuickItem.cpp  PlayerQuickItem.h  QtHelper.h  WaylandMpvPlayer.cpp  WaylandMpvPlayer.h  WaylandVulkanContext.cpp  WaylandVulkanContext.h
src/player/wayland-protocols/: color-management-v1-client.h  color-management-v1.c
src/plugins/RPI_jpeg/: QRPIJpegHandler.cpp  QRPIJpegHandler.h  QRPIJpegPlugin.cpp  QRPIJpegPlugin.h  RPI_jpeg.pro  brcmjpeg.cpp  jpeg.json
src/power/: CMakeLists.txt  PowerComponent.cpp  PowerComponent.h  PowerComponentDBus.cpp  PowerComponentDBus.h  PowerComponentMac.cpp  PowerComponentMac.h  PowerComponentOE.cpp  PowerComponentOE.h  PowerComponentWin.cpp  PowerComponentWin.h  PowerComponentX11.cpp  PowerComponentX11.h
src/remote/: CMakeLists.txt  GDMManager.cpp  GDMManager.h  RemoteComponent.cpp  RemoteComponent.h  RemoteSubscriber.cpp  RemoteSubscriber.h  RokuRemoteComponent.cpp  RokuRemoteComponent.h
src/server/: CMakeLists.txt  HTTPServer.cpp  HTTPServer.h
src/settings/: AudioSettingsController.cpp  AudioSettingsController.h  CMakeLists.txt  SettingsComponent.cpp  SettingsComponent.h  SettingsSection.cpp  SettingsSection.h  SettingsValue.h
src/shared/: CMakeLists.txt  DeepLinkHandler.cpp  DeepLinkHandler.h  LocalJsonClient.cpp  LocalJsonClient.h  LocalJsonServer.cpp  LocalJsonServer.h  Names.cpp.in  Names.h  Paths.cpp  Paths.h  UniqueApplication.cpp  UniqueApplication.h
src/system/: CMakeLists.txt  DeepLinkHandler.cpp  DeepLinkHandler.h  OEUpdateManager.cpp  OEUpdateManager.h  SystemComponent.cpp  SystemComponent.h  UpdateManager.cpp  UpdateManager.h  UpdateManagerWin32.cpp  UpdateManagerWin32.h  UpdaterComponent.cpp  UpdaterComponent.h
src/system/openelec/: CMakeLists.txt  OESystemComponent.cpp  OESystemComponent.h  SystemdManager.cpp  SystemdManager.h
src/taskbar/: CMakeLists.txt  QWinTaskbarStubs.cpp  QWinTaskbarStubs.h  TaskbarComponent.cpp  TaskbarComponent.h  TaskbarComponentWin.cpp  TaskbarComponentWin.h
src/tools/: CMakeLists.txt
src/tools/helper/: CMakeLists.txt  CrashUploader.cpp  CrashUploader.h  HelperMain.cpp  HelperSettings.h  HelperSocket.cpp  HelperSocket.h
src/tools/socket-client/: CMakeLists.txt  SocketClient.cpp
src/ui/: CMakeLists.txt  ErrorMessage.cpp  ErrorMessage.h  EventFilter.cpp  EventFilter.h  Globals.cpp  KonvergoEngine.h  KonvergoWindow.cpp  KonvergoWindow.h  WindowManager.cpp  WindowManager.h  errormessage.qml  webview-cef.qml  webview.qml
src/utils/: CMakeLists.txt  CachedRegexMatcher.cpp  CachedRegexMatcher.h  HelperLaunchd.cpp  HelperLaunchd.h  HelperLauncher.cpp  HelperLauncher.h  Log.cpp  Log.h  PlatformInfo.cpp  PlatformInfo.h  PlatformUtils.cpp  PlatformUtils.h  Utils.cpp  Utils.h
src/utils/osx/: CMakeLists.txt  OSXUtils.h  OSXUtils.mm
src/utils/win/: CMakeLists.txt  WinUtils.cpp  WinUtils.h
tests/: CMakeLists.txt  test_systemcomponent.cpp
(+248 files in other folders)
